# wv

./: Cargo.toml  README.md  wv.desktop
src/: faviconheaderbar.rs  favicontitle.rs  main.rs  settings.rs  viewer.rs  window.rs
src/css/: style.css
