[package]
name = "wv"
version = "0.1.0"
authors = ["NAKAMURA Yoshitaka <arumakanoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = { version = "0.6.2", features = ["v4_8"] }
once_cell = "1.7.2"
serde = "1.0.126"
serde_derive = "1.0.126"
toml = "0.7.2"
webkit2gtk5 = { version = "0.3", features = ["v2_38"] }
