[package]
name = "wv"
version = "0.1.0"
authors = ["NAKAMURA Yoshitaka <arumakanoy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
serde = "1.0.126"
serde_derive = "1.0.126"
toml = "0.8.0"
webkit6 = { version = "0.4", features = ["v2_44"] }
